<?xml version="1.0"?>
<package>
  <name>ps4eye</name>
  <version>0.0.1</version>
  <description>The ps4eye package</description>

  <maintainer email="ryosuke.tajima@gmail.com">Ron Tajima</maintainer>

  <author email="ryosuke.tajima@gmail.com">Ron Tajima</author>

  <license>Apache License Version 2.0</license>

  <url type="website">http://wiki.ros.org/ps4eye</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
